# Working-with-CMakeLists

./: CMakeLists.txt  main.cpp  test  test.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  myapp
headers/: h1.hpp  h2.hpp
